--- a/framework-ashley/build.gradle
+++ b/framework-ashley/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'java'
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 dependencies {
+    compile project(":framework")
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
     compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
 }
